dpkg-buildpackage/dpkg-genchanges: handle .debian.tar.gz files too
* scripts/dpkg-buildpackage.pl, scripts/dpkg-genchanges.pl: Treat
debian.tar.gz files (used by 3.0 (quilt) source packages) like diff.gz
files when it comes to detection of the kind of upload.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-06-21  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-buildpackage.pl, scripts/dpkg-genchanges.pl: Treat
+	debian.tar.gz files (used by 3.0 (quilt) source packages) like
+	diff.gz files when it comes to detection of the kind of upload.
+
+2008-06-21  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V3/quilt.pm: Define QUILT_SERIES
 	when running quilt in order to be able to use quilt series with
 	non-standard names (like debian.series or ubuntu.series).
