dpkg-shlibdeps uses softer warnings for libraries that are likely plugins
* scripts/dpkg-shlibdeps.pl: If the binary analyzed is a library on a
non-public path, assume it's likely a plugin and reduce the number of
warnings displayed about symbols not found. Also use a different,
hopefully less confusing message.
* man/dpkg-shlibdeps.1: Document the above changes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     change behaviour dynamically depending on the vendor of the current system
     (or target system when the user overrides DEB_VENDOR by setting it himself).
     Closes: #457371
+  * dpkg-shlibdeps give less strong warnings for symbols not found in NEEDED
+    libraries when the shared library is a non-public directory and is likely
+    to be a plugin. Closes: #481165
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
