--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-22  Florent USSEIL  <swiip81@free.fr>
+
+	* po/fr.po: Updated to 1601t.
+
 2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* po/pl.add: Update.
