dpkg(1) and dpkg-query(1): clarify explanation of -l and --get-selections
* man/dpkg.1, man/dpkg-query.1: Clarify lisf of packages displayed
in dpkg --get-selections and dpkg-query -l.

--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -15,7 +15,8 @@ the \fBdpkg\fP database.
 .BR \-l ", " \-\-list " \fIpackage-name-pattern\fP..."
 List packages matching given pattern. If no \fIpackage-name-pattern\fP
 is given, list all packages in \fI/var/lib/dpkg/status\fP, excluding
-the ones marked with state purge. Normal shell wildchars are allowed
+the ones marked as not-installed (i.e. those which have been previously
+purged). Normal shell wildchars are allowed
 in \fIpackage-name-pattern\fP. Please note you will probably have to
 quote \fIpackage-name-pattern\fP to prevent the shell from performing
 filename expansion. For example this will list all package names starting
