--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -213,7 +213,8 @@ working.
 .TP
 \fB\-\-get\-selections\fP [\fIpackage-name-pattern\fP...]
 Get list of package selections, and write it to stdout. Without a pattern,
-packages marked with state purge will not be shown.
+non-installed packages (i.e. those which have been previously purged)
+will not be shown.
 .TP
 .B \-\-set\-selections
 Set package selections using file read from stdin. This file should be
