--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-22  Raphael Hertzog  <hertzog@debian.org>
+
+	* man/dpkg.1, man/dpkg-query.1: Clarify lisf of packages displayed
+	in dpkg --get-selections and dpkg-query -l.
+
 2008-06-21  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: If the binary analyzed is a library on a
