--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * dpkg-shlibdeps give less strong warnings for symbols not found in NEEDED
     libraries when the shared library is a non-public directory and is likely
     to be a plugin. Closes: #481165
+  * Clarify lisf of packages displayed by dpkg --get-selections and dpkg-query -l.
+    Thanks to Jidanni. Closes: #487455
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
