dpkg-buildpackage(1): document -A option.

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     to be a plugin. Closes: #481165
   * Clarify lisf of packages displayed by dpkg --get-selections and dpkg-query -l.
     Thanks to Jidanni. Closes: #487455
+  * Document -A option in dpkg-buildpackage(1). Closes: #482834
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
