--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -18,15 +18,18 @@ Specifies a binary-only build, no source files are to be built and/or
 distributed.
 .TP
 .B \-B
-Specifies a binary-only build, no architecture independent binary package
-files are to be distributed either.
+Specifies a binary-only build, limited to architecture dependent packages.
+.TP
+.B \-A
+Specifies a binary-only build, limited to architecture independent
+packages.
 .TP
 .B \-S
 Specifies a source-only build, no binary packages need to be made.
 .PP
 The \fB-s\fP\fIx\fP options control whether the original source archive is
 included in the upload if any source is being generated (i.e.
-.BR \-b " or " \-B
+.BR \-b ", " \-B " or " \-A
 haven't been used).
 .TP
 .B \-si
