--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-22  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-buildpackage.1: Document -A option.
+
 2008-05-31  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg.1: Use the term conffile for a configuration file handled
