dpkg(1), dpkg-query(1): explain that the available file is for dselect
* dpkg.1, dpkg-query.1: Document the fact that the available file
is mostly useful for dselect users and that the related commands
are useless for APT users.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,6 +1,9 @@
 2008-06-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-buildpackage.1: Document -A option.
+	* dpkg.1, dpkg-query.1: Document the fact that the available file
+	is mostly useful for dselect users and that the related commands
+	are useless for APT users.
 
 2008-05-31  Raphael Hertzog  <hertzog@debian.org>
 
