--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -55,7 +55,10 @@ alternatives.
 .TP
 .BR \-p ", " \-\-print\-avail " \fIpackage-name\fP..."
 Display details about \fIpackage-name\fP, as found in
-\fI/var/lib/dpkg/available\fP.
+\fI/var/lib/dpkg/available\fP. Users of APT-based frontends
+should use \fBapt\-cache show\fP \fIpackage-name\fP instead
+as the \fIavailable\fP file is only kept up-to-date when
+using \fBdselect\fP.
 .TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
