--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Clarify lisf of packages displayed by dpkg --get-selections and dpkg-query -l.
     Thanks to Jidanni. Closes: #487455
   * Document -A option in dpkg-buildpackage(1). Closes: #482834
+  * Add some warning concerning the available file and the related commands.
+    They are mostly obsolete for APT users. Closes: #481185
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
