dpkg-divert: new --listpackage option
* scripts/dpkg-divert.pl: Add new option --listpackage to
dpkg-divert.
* man/dpkg-divert.1: Document new option.

--- a/THANKS
+++ b/THANKS
@@ -159,6 +159,7 @@ Steve Langasek <vorlon@debian.org>
 Sven Joachim <svenjoac@gmx.de>
 Sven Rudolph <sr1@loom.sax.de>
 Thomas Morin <thomas.morin@enst-bretagne.fr>
+Timothy G Abbott <tabbott@MIT.EDU>
 Tom Lees <tom@lpsg.demon.co.uk>
 Tomas Pospisek <tpo_deb@sourcepole.ch>
 Topi Miettinen <Topi.Miettinen@nic.fi>
