--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Document -A option in dpkg-buildpackage(1). Closes: #482834
   * Add some warning concerning the available file and the related commands.
     They are mostly obsolete for APT users. Closes: #481185
+  * Add new option --listpackage to dpkg-divert. Thanks to Timothy G Abbott
+    <tabbott@MIT.EDU> for the patch. Closes: #485012
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
