--- a/man/dpkg-divert.8
+++ b/man/dpkg-divert.8
@@ -32,6 +32,10 @@ Remove a diversion for \fIfile\fP.
 .BI \-\-list " glob-pattern"
 List diversions matching \fIglob-pattern\fP.
 .TP
+.BI \-\-listpackage " file"
+Print the name of the package that diverts \fIfile\fP.  Prints LOCAL if
+\fIfile\fP is locally diverted and nothing if \fIfile\fP is not diverted.
+.TP
 .BI \-\-truename " file"
 Print the real name for a diverted file.
 .
