* scripts/Dpkg/IPC.pm (fork_and_exec): new nocheck option

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-23  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/IPC.pm (fork_and_exec): New nocheck option that is
+	forwarded to wait_child().
+
 2008-06-23  Timothy G Abbott  <tabbott@MIT.EDU>
 
 	* scripts/dpkg-divert.pl: Add new option --listpackage to
