--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-24  Raphael Hertzog  <hertzog@debian.org>
+
+	* debian/archtable: Add armel.
+
 2008-06-21  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-buildpackage.pl, scripts/dpkg-genchanges.pl: Treat
