Thai translation updated

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.14.21) UNRELEASED; urgency=low
     dpkg-genchanges to detect the kind of upload.
   * Add "armel" to /usr/share/dpkg/archtable. Closes: #487768
 
+  [ Updated dpkg translations ]
+  * Thai (Theppitak Karoonboonyanan). Closes: #488090
+
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200
 
 dpkg (1.14.20) unstable; urgency=low
