dpkg-buildpackage: use space as separator in DEB_BUILD_OPTIONS
* scripts/Dpkg/BuildOptions.pm (parse, set): Use space as the
official separator in DEB_BUILD_OPTIONS. Check for validity of
flags and print a warning if a bad option is detected. Rewrote
the logic of set() to avoid adding options twice in non-overwrite
mode.
* scripts/t/300_Dpkg_BuildOptions.t: Fix the test suite to work with
the modified Dpkg::BuildOptions.

Cherry-pick from the master branch: commits
9866c4bafdf147ad764f31e2747f5c1012802b1d and
a8ada212bde12d7fffc5673b0c9ca397b31e1354

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Handle debian.tar.gz files like diff.gz in dpkg-buildpackage and
     dpkg-genchanges to detect the kind of upload.
   * Add "armel" to /usr/share/dpkg/archtable. Closes: #487768
+  * Modified Dpkg::BuildOptions to recognize and use spaces as separator
+    in DEB_BUILD_OPTIONS (in order to conform with the Debian policy
+    ruling established in #430649).
 
   [ Updated dpkg translations ]
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
