Correct french quotes: nothing around déclenchements, but quotes around English strings

--- a/po/fr.po
+++ b/po/fr.po
@@ -3813,7 +3813,7 @@ msgstr "Taper « dpkg-trigger --help » pour obtenir de l'aide."
 #, c-format
 msgid "Debian %s package trigger utility.\n"
 msgstr ""
-"Outil « %s » de « déclenchements (trigger) »du programme de gestion de paquets "
+"Outil « %s » de déclenchements (« triggers ») du programme de gestion de paquets "
 "Debian\n"
 
 #: src/trigcmd.c:86
@@ -3837,7 +3837,7 @@ msgid ""
 msgstr ""
 "Commandes:\n"
 "  --check-supported                Vérifie que la version de dpkg accepte "
-"les « déclenchements (triggers) » .\n"
+"les déclenchements (« triggers ») » .\n"
 "\n"
 
 #: src/trigcmd.c:105
@@ -3859,7 +3859,7 @@ msgstr ""
 "déclenchements (triggers)»\n"
 "                                     (normalement commandité par dpkg).\n"
 "  --no-await                       Les paquets n'attendent plus le "
-"traitement des « déclenchements (triggers)».\n"
+"traitement des déclenchements (« triggers »).\n"
 "  --no-act                         Pour test - pour le moment n'opère aucun "
 "changement.\n"
 "\n"
