dpkg-query(1): document the origin of fields available for --showformat

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-query.1: Document the origin of the various fields
+	and warn that they are not always available.
+
 2008-06-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-buildpackage.1: Document -A option.
