install-info: Improve error message when the file doesn't exist

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/install-info.pl: Improve error message when the
+	info file doesn't exist.
+
 2008-06-23  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-source.pl: New option --require-valid-signature.
