--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add new option --require-valid-signature to dpkg-source. Closes: #390282
   * In dpkg-query(1) document the origin of the various fields and warn that
     they are not always available. Closes: #488293
+  * Improve error message in install-info when the file doesn't exist.
+    Thanks to Thomas Hood <jdthood@yahoo.co.uk>. Closes: #107098
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
