dpkg-query: Remove trailing newlines from badusage output

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
+	* src/query.c (printforhelp): Remove trailing newlines.
+
 2008-06-27  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (do_build): Move string translation markers outside
