--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-28  Guillem Jover  <guillem@debian.org>
 
+	* lib/ehandle.c (badusage): Use ohshit instead of its own error
+	handling.
+
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (printforhelp): Remove trailing newlines.
 
 2008-06-27  Guillem Jover  <guillem@debian.org>
