libdpkg: Make checksubprocerr less deep and a bit more readable
Move the PROCNOERR check before the reporting, and exit directly instead
in case of error.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-28  Guillem Jover  <guillem@debian.org>
 
+	* lib/mlib.c (checksubprocerr): Move the PROCNOERR check before
+	the reporting, and exit directly instead in case of error.
+
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
 	* lib/ehandle.c (badusage): Use ohshit instead of its own error
 	handling.
 
