libdpkg: Move skip_slash_dotslash from parsehelp.c to path.c
And from dpkg-db.h dpkg-priv.h.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-06-28  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-db.h (skip_slash_dotslash): Move declaration ...
+	* lib/dpkg-priv.h: ... here.
+	* lib/parsehelp.c (skip_slash_dotslash): Move definition ...
+	* lib/path.c: ... here.
+	* lib/fields.c: Include <dpkg-priv.h>.
+	* src/filesdb.c: Likewise.
+
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (onerr_abort): Move declaration to the ehandle.c section.
 	* lib/mlib.c (onerr_abort): Move definition ...
 	* lib/ehandle.c: ... here.
