Fix errors in PO file that make po4a choke

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -3103,7 +3103,7 @@ msgstr ""
 #: ../../man/dpkg.1:243
 #, no-wrap
 msgid "B<--command-fd >I<E<lt>nE<gt>>"
-msgstr "B<--command-fd >|<E<lt>nE<gt>>"
+msgstr "B<--command-fd >I<E<lt>nE<gt>>"
 
 # type: Plain text
 #: ../../man/dpkg.1:248
@@ -3197,7 +3197,7 @@ msgid ""
 "B<-I>, B<--info> I<archive> [I<control-file>...]\n"
 "    Show information about a package.\n"
 msgstr ""
-"B<-b>, B<--build> I<répertoire> [I<archive|I<répertoire>]\n"
+"B<-b>, B<--build> I<répertoire> [I<archive>|I<répertoire>]\n"
 "    Construit un paquet deb.\n"
 "B<-c>, B<--contents> I<archive>\n"
 "    Liste le contenu d'un paquet deb.\n"
@@ -5212,7 +5212,7 @@ msgid ""
 "included in the upload if any source is being generated (i.e.  B<-b> or B<-"
 "B> haven't been used)."
 msgstr ""
-"Les options B<-s>|<x> contrôlent si l'archive source originale est incluse "
+"Les options B<-s>I<x> contrôlent si l'archive source originale est incluse "
 "dans l'installation produite si un paquet source est créé (cad. que les "
 "options B<-b> ou B<-B> n'ont pas été utilisées)."
 
@@ -6669,7 +6669,7 @@ msgid ""
 "in case the destination file already exists."
 msgstr ""
 "Met en fait le fichier de côté. Quand le fichier de destination existe, "
-"D<dpkg-divert> interrompt l'opération."
+"B<dpkg-divert> interrompt l'opération."
 
 # type: TP
 #: ../../man/dpkg-divert.8:64 ../../man/install-info.8:279
