man/po: Regenerate .pot file and merge .po files with it

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
+	* po/dpkg-man.pot: Regenerated.
+	* po/*.po: Merged with dpkg-man.pot.
+
 2008-06-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-query.1: Document the origin of the various fields
