--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-28  Eddy Petrișor <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 288t.
+
 2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 288t.
