dselect: Fix compilation warnings
Surround boolean expressions with parenthesis.
Switch a for with an empty body into a while.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2008-06-30  Guillem Jover  <guillem@debian.org>
 
+	* dselect/baselist.cc (baselist::wordwrapinfo): Surround expression
+	with parenthesis.
+	* dselect/pkgcmds.cc (packagelist::affectedmatches): Likewise.
+	(packagelist::affectedrange): Switch a for with an empty body into a
+	while.
+	* dselect/basecmds.cc (baselist::displayhelp): Likewise.
+	* dselect/bindings.cc (keybindings::bind, keybindings::find)
+	(keybindings::operator(), keybindings::key2name)
+	(keybindings::name2key): Likewise.
+	* dselect/main.cc (urq_menu, main): Likewise.
+	* dselect/methparse.cc (readmethods, getcurrentopt): Likewise.
+	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Likewise.
+	* dselect/pkgsublist.cc (packagelist::alreadydone): Likewise.
+
+2008-06-30  Guillem Jover  <guillem@debian.org>
+
 	* lib/trigdeferred.l: Define YY_NO_INPUT to make flex not include
 	the unused input() in the resulting object.
 
