libdpkg: Remove unneeded 'const char *' cast

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-06-30  Guillem Jover  <guillem@debian.org>
 
+	* lib/showpkg.c (parsefield): Remove unneeded 'const char *' cast.
+
+2008-06-30  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (struct arbitraryfield): Make all 'char *' members
 	'const'.
 	(struct filedetails): Likewise.
