Russian translation completed

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
   * Romanian (Eddy Petrișor).
+  * Russian (Yuri Kozlov). Closes: #488689
 
   [ Updated dselect translations ]
   * Romanian (Eddy Petrișor).
