--- a/po/ru.po
+++ b/po/ru.po
@@ -6,10 +6,10 @@
 # Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
+"Project-Id-Version: dpkg 1.14.20\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-01 14:28+0400\n"
+"PO-Revision-Date: 2008-06-30 20:58+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2544,39 +2544,38 @@ msgstr ""
 "  -i|--install      <имя файла .deb> ... | -R|--recursive <каталог> ...\n"
 "  --unpack          <имя файла .deb> ... | -R|--recursive <каталог> ...\n"
 "  -A|--record-avail <имя файла .deb> ... | -R|--recursive <каталог> ...\n"
-"  --configure              <имя пакета> ... | -a|--pending\n"
-"  --triggers-only          <имя пакета> ... | -a|--pending\n"
-"  -r|--remove |            <имя пакета> ... | -a|--pending\n"
-"  -P|--purge               <имя пакета> ... | -a|--pending\n"
-"  --get-selections [<шаблон> ...]     вывести список в стандартный поток\n"
-"                                      вывода список выбранных пакетов.\n"
-"  --set-selections                    выбрать пакеты в соответствии со\n"
-"                                      списком из стандартного потока ввода.\n"
-"  --clear-selections                  отменить выбор всех пакетов\n"
-"                                      первой необходимости.\n"
-"  --update-avail <файл Packages>      заменить информацию о доступных\n"
-"                                      пакетах содержимым файла.\n"
-"  --merge-avail <файл Packages>       объединить информацию о доступных\n"
-"                                      пакетах с содержимым файла.\n"
-"  --clear-avail                       удалить информацию о доступных "
-"пакетах.\n"
-"  --forget-old-unavail                удалить информацию о неустановленных\n"
-"                                      недоступных пакетах.\n"
-"  -s|--status <имя пакета> ...        вывести информацию о состоянии "
-"пакета.\n"
-"  -p|--print-avail <имя пакета> ...   вывести информацию о доступной\n"
-"                                      версии пакета.\n"
-"  -L|--listfiles <имя пакета> ...     перечислить файлы, принадлежащие\n"
-"                                      пакету(ам).\n"
-"  -l|--list [<шаблон> ...]            кратко перечислить пакеты.\n"
-"  -S|--search <шаблон> ...            найти пакет(ы), которому(ым)\n"
-"                                      принадлежит(ат) файл(ы).\n"
-"  -C|--audit                          проверить наличие сломанных пакетов.\n"
-"  --print-architecture                вывести целевую архитектуру.\n"
-"  --compare-versions <a> <op> <b>     сравнить номера версий, см. ниже.\n"
-"  --force-help                        вывести справку по командам "
-"игнорирования.\n"
-"  -Dh|--debug=help                    вывести справку по командам отладки.\n"
+"  --configure       <имя пакета> ... | -a|--pending\n"
+"  --triggers-only   <имя пакета> ... | -a|--pending\n"
+"  -r|--remove |     <имя пакета> ... | -a|--pending\n"
+"  -P|--purge        <имя пакета> ... | -a|--pending\n"
+"  --get-selections [<шаблон> ...]     Вывести список в стандартный поток\n"
+"                                      вывода список выбранных пакетов\n"
+"  --set-selections                    Выбрать пакеты в соответствии со\n"
+"                                      списком из стандартного потока ввода\n"
+"  --clear-selections                  Отменить выбор всех пакетов\n"
+"                                      первой необходимости\n"
+"  --update-avail <файл Packages>      Заменить информацию о доступных\n"
+"                                      пакетах содержимым файла\n"
+"  --merge-avail <файл Packages>       Объединить информацию о доступных\n"
+"                                      пакетах с содержимым файла\n"
+"  --clear-avail                       Удалить информацию о доступных "
+"пакетах\n"
+"  --forget-old-unavail                Удалить информацию о неустановленных\n"
+"                                      недоступных пакетах\n"
+"  -s|--status <имя пакета> ...        Вывести информацию о состоянии пакета\n"
+"  -p|--print-avail <имя пакета> ...   Вывести информацию о доступной\n"
+"                                      версии пакета\n"
+"  -L|--listfiles <имя пакета> ...     Перечислить файлы, принадлежащие\n"
+"                                      пакету(ам)\n"
+"  -l|--list [<шаблон> ...]            Кратко перечислить пакеты\n"
+"  -S|--search <шаблон> ...            Найти пакет(ы), которому(ым)\n"
+"                                      принадлежит(ат) файл(ы)\n"
+"  -C|--audit                          Проверить наличие сломанных пакетов\n"
+"  --print-architecture                Вывести целевую архитектуру\n"
+"  --compare-versions <a> <op> <b>     Сравнить номера версий, см. ниже\n"
+"  --force-help                        Вывести справку по командам "
+"игнорирования\n"
+"  -Dh|--debug=help                    Вывести справку по командам отладки\n"
 "\n"
 
 #: src/main.c:93 src/query.c:484 src/trigcmd.c:98 dpkg-deb/main.c:77
@@ -2588,10 +2587,10 @@ msgid ""
 "  --license|--licence              Show the copyright licensing terms.\n"
 "\n"
 msgstr ""
-"  -h|--help                           вывести это сообщение.\n"
-"  --version                           вывести номер версии.\n"
-"  --license | --licence               вывести информацию об авторских\n"
-"                                      правах и условиях лицензии.\n"
+"  -h|--help                           Вывести это сообщение\n"
+"  --version                           Вывести номер версии\n"
+"  --license | --licence               Вывести информацию об авторских\n"
+"                                      правах и условиях лицензии\n"
 "\n"
 
 #: src/main.c:99
@@ -2650,44 +2649,41 @@ msgid ""
 "\n"
 msgstr ""
 "Параметры:\n"
-"  --admindir=<каталог>                использовать <каталог> вместо %s.\n"
-"  --root=<каталог>                    установить в другой\n"
-"                                      корневой каталог.\n"
-"  --instdir=<каталог>                 изменить корневой каталог для\n"
-"                                      установки, не меняя административный\n"
-"                                      каталог.\n"
-"  -O|--selected-only                  пропустить не выбранные для\n"
-"                                      установки/обновления пакеты.\n"
-"  -E|--skip-same-version              пропустить пакеты, версия\n"
-"                                      которых совпадает с установленной.\n"
-"  -G|--refuse-downgrade               пропустить пакеты, версия\n"
-"                                      которых младше установленной.\n"
-"  -B|--auto-deconfigure               установить, даже если это может "
-"сделать\n"
-"                                      другие пакеты неработоспособными.\n"
-"  --[no-]triggers                     пропустить или принудительно "
-"выполнить\n"
-"                                      последовательную обработку триггеров.\n"
-"  --no-debsig                         пе проверять подписи пакетов.\n"
+"  --admindir=<каталог>             Использовать <каталог> вместо %s\n"
+"  --root=<каталог>                 Установить в другой\n"
+"                                   корневой каталог\n"
+"  --instdir=<каталог>              Изменить корневой каталог для\n"
+"                                   установки, не меняя административный\n"
+"                                   каталог\n"
+"  -O|--selected-only               Пропустить не выбранные для\n"
+"                                   установки/обновления пакеты\n"
+"  -E|--skip-same-version           Пропустить пакеты, версия\n"
+"                                   которых совпадает с установленной\n"
+"  -G|--refuse-downgrade            Пропустить пакеты, версия\n"
+"                                   которых младше установленной\n"
+"  -B|--auto-deconfigure            Установить, даже если это может сделать\n"
+"                                   другие пакеты неработоспособными\n"
+"  --[no-]triggers                  Пропустить или принудительно выполнить\n"
+"                                   последовательную обработку триггеров\n"
+"  --no-debsig                      Не проверять подписи пакетов\n"
 "  --no-act|--dry-run|--simulate\n"
-"                                      показать, что должно быть сделано, но\n"
-"                                      не выполнять действия.\n"
-"  -D|--debug=<восьм. знач.>           включить отладку,\n"
-"                                      см. -Dhelp или --debug=help.\n"
-"  --status-fd <n>                     вывести информацию об изменениях\n"
-"                                      состояний пакетов в файл\n"
-"                                      с дескриптором <n>.\n"
-"  --log=<имя файла>                   записывать изменения состояний\n"
-"                                      и действия в <имя файла>.\n"
+"                                   Показать, что должно быть сделано, но\n"
+"                                   не выполнять действия\n"
+"  -D|--debug=<восьм. знач.>        Включить отладку,\n"
+"                                   см. -Dhelp или --debug=help\n"
+"  --status-fd <n>                  Вывести информацию об изменениях\n"
+"                                   состояний пакетов в файл\n"
+"                                   с дескриптором <n>\n"
+"  --log=<имя файла>                Записывать изменения состояний\n"
+"                                   и действия в <имя файла>\n"
 "  --ignore-depends=<пакет>,...\n"
-"                                      игнорировать зависимости от <пакета>.\n"
-"  --force-...                         игнорировать проблемы,\n"
-"                                      см. --force-help\n"
+"                                   Игнорировать зависимости от <пакета>\n"
+"  --force-...                      Игнорировать проблемы, см. --force-help\n"
 "  --no-force-...|--refuse-...\n"
-"                                      прекратить работу при\n"
-"                                      обнаружении проблем.\n"
-"  --abort-after <n>                   прекратить работу после\n"
-"                                      обнаружения <n> количества ошибок.\n"
+"                                   Прекратить работу при\n"
+"                                   обнаружении проблем\n"
+"  --abort-after <n>                Прекратить работу после\n"
+"                                   обнаружения <n> количества ошибок\n"
 "\n"
 
 #: src/main.c:133
@@ -2702,12 +2698,9 @@ msgid ""
 "\n"
 msgstr ""
 "Операторы сравнения, возможные в --compare-versions:\n"
-"  lt le eq ne ge gt       (при отсутствии версии рассматривается\n"
-"  самая ранняя);\n"
-"  lt-nl le-nl ge-nl gt-nl (при отсутствии версии рассматривается\n"
-"  самая поздняя);\n"
-"  < << <= = >= >> >       (для совместимости с синтаксисом\n"
-"  файлов control).\n"
+"  lt le eq ne ge gt       (пустое значение версии считать самой ранней);\n"
+"  lt-nl le-nl ge-nl gt-nl (пустое значение версии считать самой поздней);\n"
+"  < << <= = >= >> >       (для совместимости с синтаксисом файла control).\n"
 "\n"
 
 #: src/main.c:140
@@ -2742,7 +2735,7 @@ msgstr ""
 "GPL),\n"
 "введите dpkg --license [*].\n"
 "\n"
-"Параметры, отмеченные [*], выводят большое количество информации.\n"
+"Команды, отмеченные [*], выводят большое количество информации.\n"
 "Объедините их в конвейер с программами `less' или `more'!"
 
 #: src/main.c:205 src/query.c:527 dpkg-deb/main.c:174 dpkg-split/main.c:152
@@ -2824,7 +2817,7 @@ msgstr ""
 "аргумент --%s (`%.250s') не является допустимым целочисленным значением"
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2863,52 +2856,50 @@ msgid ""
 "WARNING - use of options marked [!] can seriously damage your installation.\n"
 "Forcing options marked [*] are enabled by default.\n"
 msgstr ""
-"Параметры игнорирования проблем %s -- управление поведением программы при\n"
+"Параметры игнорирования позволяют управлять поведением %s при\n"
 "обнаружении ошибок:\n"
-"  вывести предупреждение и продолжить работу:  --force-<ошибка>,"
-"<ошибка>,...\n"
-"  прекратить работу и вывести сообщение:       --refuse-<ошибка>,"
-"<ошибка>,...\n"
-"Можно задать следующие ошибки:\n"
-"  all [!]                   все возможные ошибки\n"
-"  downgrade [*]             замена пакета более ранней версией\n"
-"  configure-any             настройка пакетов, которые могут помочь нашему\n"
-"  hold                      обработка пакетов даже если они зафиксированы\n"
-"  bad-path                  в PATH не найдены необходимые программы,\n"
-"                            возможны проблемы\n"
-"  not-root                  пытаться устанавливать или удалять файлы, даже\n"
-"                            если программа запущена не суперпользователем\n"
-"  overwrite                 можно перезаписывать файлы других пакетов\n"
-"  overwrite-diverted        можно перезаписать файл с изменённым\n"
-"                            размещением файлом, не являющимся таковым\n"
-"  bad-verify                установить пакет даже если он не проходит\n"
-"                            проверку подлинности\n"
-"  depends-version [!]       сделать проблемы зависимостей от конкретных\n"
-"                            версий предупреждениями\n"
-"  depends [!]               сделать все проблемы зависимостей "
+"  предупредить и продолжить работу:      --force-<ошибка>,<ошибка>,...\n"
+"  прекратить работу и вывести сообщение: --refuse-<ошибка>,<ошибка>,... | \n"
+"                                         --no-force-<ошибка>,...\n"
+"Возможные ошибки:\n"
+"  all [!]                   Все возможные ошибки\n"
+"  downgrade [*]         Замена пакета его более ранней версией\n"
+"  configure-any         Настройка пакетов, которые могут помочь\n"
+"                        устанавливаемому\n"
+"  hold                  Обработка пакетов, даже если они зафиксированы\n"
+"  bad-path              В PATH отсутствуют необходимые программы,\n"
+"                        возможны проблемы\n"
+"  not-root              Пытаться устанавливать или удалять файлы, даже\n"
+"                        если программа запущена не суперпользователем\n"
+"  overwrite             Можно перезаписывать файлы других пакетов\n"
+"  overwrite-diverted    Можно перезаписывать файл с изменённым\n"
+"                        размещением файлом, не являющимся таковым\n"
+"  bad-verify            Установить пакет, даже если он не проходит\n"
+"                        проверку подлинности\n"
+"  depends-version [!]   Сделать проблемы с зависимостями по версиям\n"
+"                        версий предупреждениями\n"
+"  depends [!]           Сделать все проблемы с зависимостями "
 "предупреждениями\n"
-"  confnew [!]               всегда использовать новые файлы конфигурации\n"
-"  confold [!]               всегда использовать старые файлы конфигурации\n"
-"  confdef [!]               использовать для новых файлов конфигурации "
-"вариант\n"
-"                            по умолчанию. Если он не задан, выдаётся "
-"запрос,\n"
-"                            если только не заданы параметры confold и "
-"confnew\n"
-"  confmiss [!]              всегда устанавливать отсутствующие файлы\n"
-"                            конфигурации\n"
-"  conflicts [!]             допускается установка конфликтующих пакетов\n"
-"  architecture [!]          обрабатывать также пакеты для других архитектур\n"
-"  overwrite-dir [!]         допускается перезапись каталога одного пакета\n"
-"                            файлом другого\n"
-"  remove-reinstreq [!]      допускается удаление пакетов, требующих\n"
-"                            переустановки\n"
-"  remove-essential [!]      допускается удаление пакетов первой "
-"необходимости\n"
+"  confnew [!]           Всегда использовать новые файлы конфигурации\n"
+"  confold [!]           Всегда использовать старые файлы конфигурации\n"
+"  confdef [!]           Использовать для новых файлов конфигурации вариант\n"
+"                        по умолчанию, если он есть, ничего не спрашивая.\n"
+"                        Если он не найден, то выдаётся запрос,\n"
+"                        если только не заданы параметры confold и confnew\n"
+"  confmiss [!]          Всегда устанавливать отсутствующие файлы "
+"конфигурации\n"
+"  breaks [!]            Устанавливать даже если это сломает другой пакет\n"
+"  conflicts [!]         Допускается установка конфликтующих пакетов\n"
+"  architecture [!]      Обрабатывать пакеты даже для других архитектур\n"
+"  overwrite-dir [!]     Допускается перезапись каталога одного пакета\n"
+"                        файлом другого\n"
+"  remove-reinstreq [!]  Допускается удаление пакетов, требующих "
+"переустановки\n"
+"  remove-essential [!]  Допускается удаление пакетов первой необходимости\n"
 "\n"
-"ВНИМАНИЕ: использование параметров, отмеченных [!], может серьёзно "
-"повредить\n"
-"вашу систему. Параметры, отмеченные [*], задействованы по умолчанию.\n"
+"ПРЕДУПРЕЖДЕНИЕ: Использование параметров, отмеченных [!], может серьёзно\n"
+"повредить вашу систему. Параметры, отмеченные [*], задействованы по "
+"умолчанию.\n"
 
 #: src/main.c:366
 #, c-format
@@ -2950,7 +2941,7 @@ msgstr "неожиданный конец файла, ещё не кончила
 #: src/main.c:611 src/main.c:626 src/query.c:563 dpkg-deb/main.c:199
 #: dpkg-split/main.c:165
 msgid "need an action option"
-msgstr "требуется параметр действия"
+msgstr "укажите требуемое действие"
 
 #: src/packages.c:105
 #, c-format
