dpkg: Properly lstat the correct file when using --root on upgrades
Closes: #281057

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-01  Egmont Koblinger  <egmont@uhulinux.hu>
+
+	* src/processarc.c (process_archive): Properly lstat the correct
+	file on upgrade when using --root.
+
 2008-07-01  Guillem Jover  <guillem@debian.org>
 
 	* src/processarc.c (process_archive): Do not allocate a struct stat
