--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     systems. Based on a patch by Juergen Kreileder. Closes: #102144, #149961
   * Do not silently enable --rename on dpkg-divert --remove. Closes: #160848
   * Do not allocate memory when lstat fails during package upgrade.
+  * Properly lstat the correct file when using --root on package upgrade.
+    Thanks to Egmont Koblinger. Closes: #281057
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
