Use '$(CPP)' instead of '$(CC) -E' in Makefile.am target

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
+	* dselect/Makefile.am (curkeys.h): Use '$(CPP)' instead of '$(CC) -E'.
+
 2008-07-01  Guillem Jover  <guillem@debian.org>
 
 	* src/depcon.c (findbreakcyclerecursive): Use the debug function
