--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg-priv.h: Include <stddef.h>.
+	* lib/string.c: Include <config.h> and <dpkg-priv.h>.
+
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
 	* dselect/Makefile.am (curkeys.h): Use '$(CPP)' instead of '$(CC) -E'.
 
 2008-07-01  Guillem Jover  <guillem@debian.org>
