--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
+	* src/archives.c (tarfile_skip_one_forward): Make static.
+
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-priv.h: Include <stddef.h>.
 	* lib/string.c: Include <config.h> and <dpkg-priv.h>.
 
