Remove wrong comment not matching the code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
+	* src/remove.c (removal_bulk_remove_configfiles): Remove wrong comment
+	not matching the code.
+
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
 	* src/archives.c (tarfile_skip_one_forward): Make static.
 
 2008-07-02  Guillem Jover  <guillem@debian.org>
