Use NULL instead of 0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-07-02  Guillem Jover  <guillem@debian.org>
 
+	* src/query.c (limiteddescription): Use NULL instead of 0.
+	(list1package, searchfiles, enqperpackage, main): Likewise.
+	(cipaction, ignoredependss, cmdinfos): Likewise.
+	(ACTION, OBSOLETE): Likewise.
+	* src/select.c (setselections): Likewise.
+	* src/trigcmd.c (cmdinfos): Likewise.
+
+2008-07-02  Guillem Jover  <guillem@debian.org>
+
 	* src/remove.c (removal_bulk_remove_configfiles): Remove wrong comment
 	not matching the code.
 
